manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  labels:
    app: hello-app
spec:
  selector:
    matchLabels:
      app: hello-app
      tier: web
  template:
    metadata:
      labels:
        app: hello-app
        tier: web
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  labels:
    app: hello-app
spec:
  selector:
    app: hello-app
    tier: web
  ports:
  - port: 80
    targetPort: 8080
