manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  labels:
    app: hello-app
spec:
  selector:
    app: hello-app
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
